--- a/catalog.html
+++ b/catalog.html
@@ -59,6 +59,47 @@
       </section>
       <!--/heading page section-->
       <!--items filter-->
+      <form action="https://echo.htmlacademy.ru" method="GET">
+        <fieldset>
+          <legend>Цвет</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="filter-color" id="filter-color-black" value="black" checked>
+              <label for="filter-color-black">Черный</label>
+            </li>
+            <li>
+              <input type="checkbox" name="filter-color" id="filter-color-white" value="white">
+              <label for="filter-color-white">Белый</label>
+            </li>
+            <li>
+              <input type="checkbox" name="filter-color" id="filter-color-blue" value="blue" checked>
+              <label for="filter-color-blue">Синий</label>
+            </li>
+            <li>
+              <input type="checkbox" name="filter-color" id="filter-color-red" value="red" checked>
+              <label for="filter-color-red">Красный</label>
+            </li>
+            <li>
+              <input type="checkbox" name="filter-color" id="filter-color-pink" value="pink">
+              <label for="filter-color-pink">Розовый</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Bluetooth</legend>
+          <ul>
+            <li>
+              <input type="radio" name="bluetooth" id="filter-bluetooth-yes" value="1">
+              <label for="filter-bluetooth">Есть</label>
+            </li>
+            <li>
+              <input type="radio" name="bluetooth" id="filter-bluetooth-no" value="0">
+              <label for="filter-bluetooth-no">Нет</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button type="submit">Показать</button>
+      </form>
       <!--/items filter-->
       <!--items list-->
       <section>
