--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
   </head>
-
   <body>
-    <!--Бонусное задание продолжаем готовить графику-->
     <header>
       <a>
         <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
       </a>
-      <form>
+      <form action="https://echo.htmlacademy.ru" method="GET">
         <input type="text" name="search" placeholder="Поиск по сайту">
-        <input type="submit" value="Поиск">
+        <input type="submit" value="Найти">
       </form>
       <ul>
         <li>
@@ -28,25 +26,25 @@
       </ul>
       <nav>
         <ul>
-          <li>
-            <a href="catalog.html">Каталог товаров</a>
+          <li aria-haspopup="true">
+            <a role="menu" tabindex="0" aria-label="Каталог товаров">Каталог товаров</a>
             <ul>
-              <li>
+              <li tabindex="-1">
                 <a href="">Виртуальная реальность</a>
               </li>
-              <li>
+              <li tabindex="-1">
                 <a href="">Фитнес-браслеты</a>
               </li>
-              <li>
+              <li tabindex="-1">
                 <a href="">Квадрокоптеры</a>
               </li>
-              <li>
-                <a href="">Моноподы для селфи</a>
+              <li tabindex="-1">
+                <a href=""> Моноподы для селфи</a>
               </li>
-              <li>
+              <li tabindex="-1">
                 <a href="">Умные часы</a>
               </li>
-              <li>
+              <li tabindex="-1">
                 <a href="">Экшн-камеры</a>
               </li>
             </ul>
@@ -68,12 +66,14 @@
       <!--main slider-->
       <section>
         <!--#1 slide-->
+        <h2 class="visually-hidden">Слайдер</h2>
         <div>
           <p>
             <img src="img/slider-1.png" alt="Профессиональная селфи-палка">
           </p>
           <div>
-            <h2>Делай селфи, как Бен Стиллер!</h2>
+            <span class="visually-hidden">Слайд 1</span>
+            <h3>Делай селфи, как Бен Стиллер!</h3>
             <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
             </p>
@@ -95,11 +95,12 @@
         <!--/#1 slide-->
         <!--#2 slide-->
         <div>
+          <span class="visually-hidden">Слайд 2</span>
           <p>
             <img src="img/slider-2.png" alt="Фитнес-браслет">
           </p>
           <div>
-            <h2>Худеем правильно!</h2>
+            <h3>Худеем правильно!</h3>
             <p>
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
@@ -117,6 +118,7 @@
         <!--/#2 slide-->
         <!--#3 slide-->
         <div>
+          <span class="visually-hidden">Слайд 3</span>
           <p>
             <img src="img/slider-3.png" alt="Квадрокоптер">
           </p>
@@ -143,6 +145,7 @@
       <!--/main slider-->
       <!--catalog sections-->
       <section>
+        <h2 class="visually-hidden">Категории товаров</h2>
         <ul>
           <li>
             <img src="img/popular-1.svg" alt="Виртуальная реальность">
@@ -185,6 +188,7 @@
       <!--/catalog sections-->
       <!--promo slider-->
       <section>
+        <h2 class="visually-hidden">Наши услуги</h2>
         <ul>
           <li>
             <button>Доставка</button>
@@ -296,7 +300,7 @@
     <footer>
       <a>
         <svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35" fill="#ffc600">
-          <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z"/>
+          <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z" />
         </svg>
       </a>
       <ul>
@@ -339,5 +343,4 @@
       </p>
     </footer>
   </body>
-
 </html>
